--- a/задача.html
+++ b/задача.html
@@ -1,1 +1,48 @@
 <!doctype htnl>
+<html lang="en">
+
+<head>
+
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equi="X-UA-Compatible" coontent="ie=edge">
+    <title>My resume</title>
+
+    <!-- <style> 
+        .rightpic {
+        float: center;
+        margin: 10 10 1px 1px;
+        }
+        </style> -->
+
+</head>
+
+<body>
+
+    <h1>My resume </h1>
+
+    <ul>
+        <li>Work experience - have not ;</li>
+        <li>Instagram - <a
+                href="https://www.instagram.com/invites/contact/?i=eqbjvw2q7l11&utm_content=2gzd8o5">_egorgei_</a> </li>
+        <li>My phone number -<b> 0682020699 </b>;</li>
+        <li>Stading Front-End ;</li>
+    </ul>
+
+    <h2>A little bit about myself</h2>
+
+    <p><b>foto:</b> </p>
+    <p> <a href="https://www.instagram.com/invites/contact/?i=eqbjvw2q7l11&utm_content=2gzd8o5">
+            <img src="https://mail.google.com/mail/u/0?ui=2&ik=fc84f10769&attid=0.1&permmsgid=msg-f:1668753181228078166&th=17289a2d48e71456&view=att&disp=safe.svg"
+                wight="200" height="250"> </a> </p>
+    <p>I am stadуing at the <b><a href="https://lms.beetroot.academy/online">Beetroot
+                Academ</a></b> now,
+        on Front-End course , it is me first homeworck is this is a summary .</p>
+    <p>I like classical music , especialy the works of Vivaldi and Mozart. </p>
+    <p>I don`t know what can I write about, becouse I don`t yet have expirience in creating full-fledfed
+        sites.</p>
+
+
+</body>
+
+</html>
